2010-09-23  Mike Frysinger  <vapier@gentoo.org>
	    Corinna Vinschen  <vinschen@redhat.com>

	* doc/porting.texi: Fix typos.

2010-09-22  Mike Frysinger  <vapier@gentoo.org>

	* README: Add bfin to the list.

2010-08-27  Christophe Lyon  <christophe.lyon@st.com>

	* syscalls.c (_isatty): Fix return value.

2010-07-23  Naveen.H.S  <naveenh1@kpitcummins.com>
            Gina Verlekar <gina.verlekar@kpitcummins.com>

        Moving files from newlib/libc/sys/sysnecv850 to v850

        * libnosys/configure: Regenerated.
        * libnosys/configure.in: Compact v850 support to v850*-*-*.
        * libnosys/configure: Regenerated.
        * configure.in: Add libgloss support for v850.
        * configure: Regenerated.
        * v850/access.c: New file.
        * v850/aclocal.m4: New.
        * v850/chmod.c: New.
        * v850/chown.c: New.
        * v850/close.c: New.
        * v850/configure: New.
        * v850/configure.in: New.
        * v850/crt0.S: New.
        * v850/crt1.c: New.
        * v850/execv.c: New.
        * v850/execve.c: New.
        * v850/_exit.c: New.
        * v850/fork.c: New.
        * v850/fstat.c: New.
        * v850/getpid.c: New.
        * v850/gettime.c: New.
        * v850/isatty.c: New.
        * v850/kill.c: New.
        * v850/link.c: New.
        * v850/lseek.c: New.
        * v850/Makefile.in: New.
        * v850/open.c: New.
        * v850/pipe.c: New.
        * v850/read.c: New.
        * v850/sbrk.c: New.
        * v850/sim.ld: New.
        * v850/stat.c: New.
        * v850/time.c: New.
        * v850/times.c: New.
        * v850/trap.S: New.
        * v850/unlink.c: New.
        * v850/utime.c: New.
        * v850/wait.c: New.
        * v850/write.c: New.

2010-07-19  Rafael Campos  <methril@gmail.com>

	* m68k/cf-crt1.c (hardware_init_hook): Accommodate new family
	__mcf_family_51 since gcc 4.5.1.

2010-06-29  Nick Clifton  <nickc@redhat.com>

	* xstormy16/eva_app.ld (.gcc_except_table): Include sections with