@@ -1,3 +1,7 @@
+2010-10-02  Anthony Green  <green@moxielogic.com>
+
+	* moxie/crt0.S (_start): Minor optimizations to __start.
+
 2010-09-23  Mike Frysinger  <vapier@gentoo.org>
 	    Corinna Vinschen  <vinschen@redhat.com>
 
